--- a/scss/_tablet.scss
+++ b/scss/_tablet.scss
@@ -143,9 +143,5 @@
                     }
             }
     }
-    //location.html
-    footer.section__accent {
-        background-color: var(--clr-accent); 
-    }
 
 }
